<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ContentActivity">

    <RelativeLayout
        android:id="@+id/rela"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/amount"
            android:tint="@color/white"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/may_the_years_ahead_be_filled_with_lasting_joy"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:targetApi="jelly_bean" />

    </RelativeLayout>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/square"
        android:rotation="45"
        android:layout_gravity="center"
        android:layout_marginTop="-10dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

        <Button
            android:layout_width="160dp"
            android:layout_height="165dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/add"
            android:text="@string/add_information"
            tools:targetApi="jelly_bean"
            android:onClick="addInfo"/>

        <Button

            android:layout_width="160dp"
            android:layout_height="165dp"
            android:layout_marginLeft="1dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/edit"
            android:text="@string/edit_information"
            tools:targetApi="jelly_bean"
            android:onClick="editInfo"
            android:layout_marginStart="1dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="190dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="160dp"
                android:layout_height="165dp"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/delete"
                android:fontFamily="sans-serif-medium"
                android:text="@string/delete_information"
                android:textColor="@color/white"
                android:onClick="deleteInfo"
                tools:targetApi="jelly_bean" />

            <Button

                android:layout_width="160dp"
                android:onClick="viewInfo"
                android:layout_height="165dp"
                android:layout_marginLeft="1dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:drawableTop="@drawable/view"
                android:text="@string/view_information"
                tools:targetApi="jelly_bean"
                android:layout_marginStart="1dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>