<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        tools:targetApi="lollipop" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/edit_info"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                tools:targetApi="jelly_bean" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="67dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/square"
                android:rotation="45"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="38dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/imageView">
            <ImageView
                android:id="@+id/imageId"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:src="@drawable/id"
                android:tint="@color/white"/>

            <EditText
                android:id="@+id/upId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:inputType="number"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imageId"
                android:layout_alignParentTop="true"
                android:layout_alignBottom="@id/imageId"
                android:background="@color/editText"
                android:layout_toEndOf="@id/imageId"
                android:paddingStart="20dp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/imageView">
            <ImageView
                android:id="@+id/imageUser"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:src="@drawable/family"
                android:tint="@color/white"/>

            <EditText
                android:id="@+id/upFamily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/family_name"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imageUser"
                android:layout_alignParentTop="true"
                android:layout_alignBottom="@id/imageUser"
                android:background="@color/editText"
                android:layout_toEndOf="@id/imageUser"
                android:paddingStart="20dp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/relative">
            <ImageView
                android:id="@+id/imagePass"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:src="@drawable/name"
                android:tint="@color/white"/>

            <EditText
                android:id="@+id/upName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imagePass"
                android:layout_alignParentTop="true"
                android:layout_alignBottom="@id/imagePass"
                android:background="@color/editText"
                android:layout_toEndOf="@id/imagePass"
                android:paddingStart="20dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/relative">
            <ImageView
                android:id="@+id/imageCity"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:src="@drawable/city"
                android:tint="@color/white"/>

            <EditText
                android:id="@+id/upCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city_town_village"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imageCity"
                android:layout_alignParentTop="true"
                android:layout_alignBottom="@id/imageCity"
                android:background="@color/editText"
                android:layout_toEndOf="@id/imageCity"
                android:paddingStart="20dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="340dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/relative">
            <ImageView
                android:id="@+id/imagePresents"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:src="@drawable/gift"
                android:tint="@color/white"/>

            <EditText
                android:id="@+id/upPresent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/presents"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imagePresents"
                android:layout_alignParentTop="true"
                android:layout_alignBottom="@id/imagePresents"
                android:background="@color/editText"
                android:layout_toEndOf="@id/imagePresents"
                android:paddingStart="20dp" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="410dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:onClick="editDetail"
            android:fontFamily="sans-serif-medium"
            android:text="@string/edit_in"
            tools:targetApi="jelly_bean" />

    </androidx.cardview.widget.CardView>

</LinearLayout>